--- a/build.gradle
+++ b/build.gradle
@@ -191,6 +191,8 @@ dependencies {
     implementation fg.deobf("curse.maven:modernfix-790626:4565795")
     implementation fg.deobf("curse.maven:nbtedit-reborn-678133:4766080")
     implementation fg.deobf("curse.maven:nbt-tool-451553:3748971")
+    implementation fg.deobf("curse.maven:alexs-mobs-426558:3853078")
+    implementation fg.deobf("curse.maven:citadel-331936:3783096") // alex mobs dep
 
     implementation fg.deobf("curse.maven:sophisticated-backpacks-vault-hunters-edition-696425:4287544")
     implementation fg.deobf("curse.maven:sophisticated-core-618298:4489807")
