--- a/build.gradle
+++ b/build.gradle
@@ -239,3 +239,6 @@ tasks.named('jar', Jar).configure {
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
+
+tasks.jar.archiveClassifier.set('slim')
+tasks.jarJar.archiveClassifier.set('')
