--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ minecraft_version=1.18.2
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.18.2,1.19)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=40.2.17
+forge_version=40.3.11
 # The Forge version range can use any version of Forge as bounds or match the loader version range
 forge_version_range=[40,)
 # The loader version range can only use the major version of Forge/FML as bounds
@@ -42,7 +42,7 @@ mod_name=Vault Curios Enhancements
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.11
+mod_version=1.12
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -51,3 +51,6 @@ mod_group_id=com.radimous
 mod_authors=radimous
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Makes vault curios shift-clickable and adds vault compass, shard pouch and junk identifier curios
+
+vault_hunters_version=7329695
+vault_pack_url=https://mediafilez.forgecdn.net/files/7329/901/Vault%20Hunters%20Official%20Pack%20%283rd%20Ed.%29-3.20.1.0.zip
